--- a/src/main/resources/view/SurveyView2.fxml
+++ b/src/main/resources/view/SurveyView2.fxml
@@ -5,16 +5,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <DecorationPane xmlns:fx="http://javafx.com/fxml/1" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity"
-                minHeight="-Infinity"
-                minWidth="-Infinity"
-                prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+                minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
                 fx:controller="de.vatrascell.nezr.survey.SurveyController">
+    <ImageView fx:id="imageView" fitHeight="218.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true"
+               translateX="220.0" translateY="-80.0"/>
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <VBox fx:id="outerVBox" alignment="TOP_CENTER" spacing="8.0" BorderPane.alignment="CENTER"/>
@@ -26,7 +27,7 @@
                 <Button fx:id="nextButton" layoutX="527.0" layoutY="356.0" mnemonicParsing="false" onAction="#next"
                         text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0"
                         AnchorPane.rightAnchor="15.0"/>
-                <Button fx:id="btn_pre" layoutX="537.0" layoutY="366.0" mnemonicParsing="false" onAction="#pre"
+                <Button fx:id="preButton" layoutX="537.0" layoutY="366.0" mnemonicParsing="false" onAction="#pre"
                         text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0"
                         AnchorPane.rightAnchor="80.0"/>
                 <HBox fx:id="footerHBox" alignment="CENTER" layoutX="129.0" layoutY="23.0" prefHeight="25.0"
