--- a/src/main/resources/view/LocationView.fxml
+++ b/src/main/resources/view/LocationView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.sothawo.mapjfx.MapView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -8,25 +9,26 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="500.0" prefWidth="900.0"
-            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="de.vatrascell.nezr.location.LocationController">
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
+            xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="de.vatrascell.nezr.location.LocationController">
+    <center>
+        <AnchorPane BorderPane.alignment="CENTER">
             <ChoiceBox fx:id="choiceBox" prefWidth="300.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0"
-                       AnchorPane.topAnchor="100.0"/>
+                       AnchorPane.topAnchor="32.0"/>
             <Button mnemonicParsing="false" onAction="#next" prefHeight="25.0" text="Weiter"
-                    AnchorPane.bottomAnchor="16.0" AnchorPane.rightAnchor="128.0"/>
-         </children>
-      </AnchorPane>
-   </center>
-   <top>
-      <Label text="Standort" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets top="15.0"/>
-         </BorderPane.margin>
-         <font>
-            <Font size="36.0"/>
-         </font>
-      </Label>
-   </top>
+                    AnchorPane.bottomAnchor="16.0" AnchorPane.rightAnchor="64.0"/>
+            <MapView fx:id="mapView" layoutX="99.0" layoutY="77.0" prefHeight="273.0" prefWidth="700.0"
+                     AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0"
+                     AnchorPane.topAnchor="88.0"/>
+        </AnchorPane>
+    </center>
+    <top>
+        <Label text="Standort" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets top="15.0"/>
+            </BorderPane.margin>
+            <font>
+                <Font size="36.0"/>
+            </font>
+        </Label>
+    </top>
 </BorderPane>
